# borneo-bulletin-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  image_proxy.py  pyproject.toml  requirements.txt  responses.py  scraper.py
.github/workflows/: test.yml
bot/: bot.py
bot/cogs/: General.py  Headline.py  National.py  cog1.py  responses.py  scheduled_messages.py
bot/scraper/: scraper.py
bot/summarize/: summarize.py
cogs/: dedupe.py  news.py  scheduler.py  scraper.py  subscription.py  utility.py
data/: articles.json.example  previous_links.json.example  today_links.json.example  user_subscriptions.json.example
scraper/: scrape_articles.py  scrape_links.py
tests/: test_scraper.py
